added kent and tim's session

--- a/index.html
+++ b/index.html
@@ -176,6 +176,26 @@ Agility,” Addison Wesley. Todd has written several articles for IEEE Software 
 posts all his publications and presentations on his website www.toddlittleweb.com.</p>
       </div>
 
+
+
+
+      <div class="col-md-6 centered" id="kent-mcdonald">
+        <img class="img img-circle img-md" src="assets/img/speakers/kent-mcdonald.png" alt="">
+        <br>
+        <h4><b>Kent McDonald</b></h4>
+        <!--<a href="#" class="icon icon-twitter"></a>-->
+        <!--<a href="#" class="icon icon-facebook"></a>-->
+        <!--<a href="#" class="icon icon-flickr"></a>-->
+        <p>
+        Kent J. McDonald uncovers better ways of delivering value by doing it and helping others do it.  His more than 15 years of experience include work in business analysis, strategic planning, project management, and product development in a variety of industries including financial services, health insurance, performance marketing, human services, nonprofit, and automotive. He is active in the business analysis and agile software development communities helping people share stories about what does and does not work.  He shares those stories at beyondrequirements.com, techwell.com, and projectconnections.com in addition to presenting at and helping organize several local and international conferences.
+        </p>
+        <p>Kent is VP of Product Development for B2T Training and is writing his second book <i>Beyond Requirements: Analysis with an Agile Mindset</i>.  He is also co-author of <i>Stand Back and Deliver: Accelerating Business Agility</i>.
+        </p>
+      </div>
+
+
+
+
       <div class="col-md-6 centered" id="niel-nickolaisen">
         <img class="img img-circle img-md" src="assets/img/speakers/niel-nickolaisen.jpg" alt="">
         <br>
@@ -378,9 +398,7 @@ Natalie is a Certified ScrumMaster (CSM) and has her Bachelor of Business Admini
           <h4>Todd Little</h4>
         </div>
         <div class="col-md-8">
-          <h4><b>
-          Mythbusting Software Estimation
-          </b></h4>
+          <h4><b><a href="#todd-little-sched">Mythbusting Software Estimation</a></b></h4>
 <p>In the world of software development, estimation challenges exist on multiple fronts. Teams are faced with estimating value, cost, and/or schedule at the task, story, project, and/or portfolio level. There are some agile practices that claim to help with estimation, including not doing estimation at all, but still many agile projects are challenged. In this session Todd will look into some of the reasons for these challenges by exploring a number of myths of software estimation and then setting out to validate or bust these myths. Learn what the real data says, not what some pundit says should be true.
 Some of the myths that will be explored include:
 </p>
@@ -418,11 +436,29 @@ Some of the myths that will be explored include:
           <h4>Ryan Bergman</h4>
         </div>
         <div class="col-md-8">
-          <h4><b>Building an Airplane While Flying: Strategies for Continuous Delivery</b></h4>
+          <h4><b><a href="#ryan-bergman-sched">Building an Airplane While Flying: Strategies for Continuous Delivery</a></b></h4>
           <p>Continuous Delivery can be a hard concept for many people coming into agile. The act of continuously pushing new code into production on a regular basis can be scary. For many people the idea is so far out-there they think they couldn’t possibly achieve it and never try. This presentation will focus on different techniques for practicing continuous delivery while still controlling the end user experience and managing risk. We will look at how to manage multi-sprint “epics”, target selective groups for rollout, and protect the end users from “too much” change.</p>
         </div>
       </div>
       
+    <div class="col-md-6 centered" id="kent-mcdonald-session">
+        <div class="col-md-4">
+          <a href="#kent-mcdonald" class="smoothScroll">
+            <img class="img img-circle img-sm" src="assets/img/speakers/kent-mcdonald.png" alt="">
+          </a>
+          <br>
+          <h4>Kent McDonald</h4>
+        </div>
+        <div class="col-md-8">
+          <h4><b><a href="#kent-mcdonald-sched">Business Value Is a Conversation, Not a Number</a></b></h4>
+          <p>
+          Teams often talk a great deal about how projects need to deliver “business value”, but what does that really mean? The true use of business value in projects is to determine what to deliver and in what order. Teams may try to quantify their business value but that activity may be entirely unnecessary. Kent describes a set of techniques that teams use to guide their conversations to determine if they are building the right thing in the right order to solve a problem that is worth solving. He will also talk about how the conversation ends in decisions about how to proceed and the metrics that demonstrate the value is delivered.
+          </p>
+        </div>
+      </div>
+
+ 
+
       <div class="col-md-6 centered" id="tim-andersen-session">
         <div class="col-md-4">
           <a href="#tim-andersen" class="smoothScroll">
@@ -432,8 +468,9 @@ Some of the myths that will be explored include:
           <h4>Tim Andersen</h4>
         </div>
         <div class="col-md-8">
-          <h4><b><a href="#tim-andersen-sched">TBD</a></b></h4>
-          <p></p>
+          <h4><b><a href="#tim-andersen-sched">Nurturing Pair Programming</a></b></h4>
+          <p>Pair Programming is widely recommended as a good agile practice, but are you reaping the rewards?
+Has your organization adopted pair programming an everyday accepted practice or is there a perception that is is too difficult to justify? Perhaps management approves of pair programming but the developers don't buy-in. Is pair programming too extreme for you? This session explores how to support and encourage pair programming, identifies the value pair programming provides to the business, and describes how developers can realize the maximum benefits from pair programming.</p>
         </div>
       </div>
 
@@ -509,7 +546,7 @@ Some of the myths that will be explored include:
           <td class="col-time">10:00 - 11:00</td>
           <td>
             <div id="kent-mcdonald-sched">Kent McDonald</div>
-            <a href="#kent-mcdonald-session"class="smoothScroll">TBD</a>
+            <a href="#kent-mcdonald-session"class="smoothScroll">Business Value Is a Conversation, Not a Number</a>
           </td>
           <td>
             <div id="david-hussman-sched">David Hussman</div>
@@ -536,7 +573,7 @@ Some of the myths that will be explored include:
           </td>
           <td>
             <div id="tim-andersen-sched">Tim Andersen</div>
-            <a href="#tim-andersen-session"class="smoothScroll">TBD</a>
+            <a href="#tim-andersen-session"class="smoothScroll">Nurturing Pair Programming</a>
           </td>
         </tr>
         <tr class="col-all">
