--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ ga('send', 'pageview');
           <li><a href="#home" class="smoothScroll">Home</a></li>
           <li><a href="#speakers" class="smoothScroll"> Speakers</a></li>
           <li> <a href="#sessions" class="smoothScroll"> Sessions</a></li>
+          <li> <a href="#schedule" class="smoothScroll"> Schedule</a></li>
           <!--<li> <a href="#spaces" class="smoothScroll"> Spaces</a></li>-->
         </ul>
         </div><!--/.nav-collapse -->
