Published Brandon Carlson abstract

--- a/index.html
+++ b/index.html
@@ -485,8 +485,11 @@ Has your organization adopted pair programming an everyday accepted practice or 
           <h4>Brandon Carlson</h4>
         </div>
         <div class="col-md-8">
-          <h4><b><a href="#brandon-carlson-sched">TBD</a></b></h4>
-          <p></p>
+          <h4><b><a href="#brandon-carlson-sched">Learning Before Building</a></b></h4>
+	  <p>According to a Standish group study, 64 percent of features in a given software system are rarely—or never—used. How does this happen? Today, the work of eliciting the customers' true needs, which remains elusive, can be enhanced using data-driven requirements techniques.
+
+Brandon introduces some of the reasons why identifying customer needs is so difficult and how you can improve them using techniques that you can employ on your projects right away. Find out how to instrument existing applications and develop new requirements based on operational profiles of the current system. Learn to use A/B testing—a technique for trying out and analyzing alternative implementations—on your current system to determine which new features will deliver the most business value. With these tools and others at hand, you can help users and business stakeholders decide the best approaches and best new features to meet their real needs. Now is the time to take the guesswork out of requirements and get the facts.</a></b></h4>
+          </p>
         </div>
       </div>
 
