Updated timeslot for Brandon Carlson

--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@ Brandon introduces some of the reasons why identifying customer needs is so diff
           </td>
           <td>
             <div id="brandon-carlson-sched">Brandon Carlson</div>
-            <a href="#brandon-carlson-session"class="smoothScroll">TBD</a>
+            <a href="#brandon-carlson-session"class="smoothScroll">Learning Before Building</a>
           </td>
         </tr>
         <tr class="col-all">
