Fixed session typos suggested by Kristin

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@ Natalie is a Certified ScrumMaster (CSM) and has her Bachelor of Business Admini
         </div>
         <div class="col-md-8">
           <h4><b><a href="#pollyanna-pixton-sched">Building a Culture for High Performance Teams</a></b></h4>
-          <p>We know that teams and individuals that take ownership of their work out perform those that don’t, often by 50%! For high performance teams, ownership is essential. But, leaders struggle letting their teams take ownership. Why? They are afraid if they trust their teams, they will not take ownership and fail. Leaders must create a culture of trust and help their teams take ownership. But what is the team builds the wrong product? Teams must align with the strategy and purpose of the business as well as value to the customer. Finally, the organization must deal honestly with ambiguity. Uncertainty is the new normal.
+          <p>We know that teams and individuals that take ownership of their work out perform those that don’t, often by 50%! For high performance teams, ownership is essential. But, leaders struggle letting their teams take ownership. Why? They are afraid if they trust their teams, they will not take ownership and fail. Leaders must create a culture of trust and help their teams take ownership. But what if the team builds the wrong product? Teams must align with the strategy and purpose of the business as well as value to the customer. Finally, the organization must deal honestly with ambiguity. Uncertainty is the new normal.
 </p>
 <p>How do teams, individuals and leaders address these issues? Pollyanna provides you with the tools to create a culture of trust by dealing with fear of collaboration; helping teams take ownership through asking questions and not giving answers (“How do you want to solve it?”); aligning with the business by using decision filters based on a business value conversation; and finally, helping teams show real progress and not committing until all risks are within an acceptable range.</p>
         </div>
@@ -471,7 +471,7 @@ Some of the myths that will be explored include:
         <div class="col-md-8">
           <h4><b><a href="#tim-andersen-sched">Nurturing Pair Programming</a></b></h4>
           <p>Pair Programming is widely recommended as a good agile practice, but are you reaping the rewards?
-Has your organization adopted pair programming an everyday accepted practice or is there a perception that is is too difficult to justify? Perhaps management approves of pair programming but the developers don't buy-in. Is pair programming too extreme for you? This session explores how to support and encourage pair programming, identifies the value pair programming provides to the business, and describes how developers can realize the maximum benefits from pair programming.</p>
+Has your organization adopted pair programming as an everyday accepted practice or is there a perception that it is too difficult to justify? Perhaps management approves of pair programming but the developers don't buy-in. Is pair programming too extreme for you? This session explores how to support and encourage pair programming, identifies the value pair programming provides to the business, and describes how developers can realize the maximum benefits from pair programming.</p>
         </div>
       </div>
 
