Added Jeffrey's session

--- a/index.html
+++ b/index.html
@@ -502,8 +502,12 @@ Brandon introduces some of the reasons why identifying customer needs is so diff
           <h4>Jeffrey Davidson</h4>
         </div>
         <div class="col-md-8">
-          <h4><b><a href="#jeffrey-davidson-sched">TBD</a></b></h4>
-          <p></p>
+          <h4><b><a href="#jeffrey-davidson-sched">Writing Better User Stories</a></b></h4>
+          <p>
+&quot;As a user of your system, I want functionality so that I can achieve my goals. Unfortunately, your team's users stories are getting in the way.&quot;
+</p>
+<p>
+Users Stories, the tool teams use to break ideas into small chunks of deliverable work, are easy to describe and challenging to write. This session is about writing great user stories and acceptance criteria by ensuring everyone on the team knows what needs to be done. We will discuss what elements should be included and which ones are optional; why the size of your user story is important and how to make them smaller; and the structure for better acceptance criteria.</p>
         </div>
       </div>
 
@@ -596,7 +600,7 @@ Brandon introduces some of the reasons why identifying customer needs is so diff
           </td>
           <td>
             <div id="jeffrey-davidson-sched">Jeffrey Davidson</div>
-            <a href="#jeffrey-davidson-session"class="smoothScroll">TBD</a>
+            <a href="#jeffrey-davidson-session"class="smoothScroll">Writing Better User Stories</a>
           </td>
         </tr>
         <tr class="col-all">
