Added a link to download presentations

--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@ ga('send', 'pageview');
           <li><a href="#speakers" class="smoothScroll"> Speakers</a></li>
           <li> <a href="#sessions" class="smoothScroll"> Sessions</a></li>
           <li> <a href="#schedule" class="smoothScroll"> Schedule</a></li>
-          <!--<li> <a href="#spaces" class="smoothScroll"> Spaces</a></li>-->
         </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -78,8 +77,9 @@ ga('send', 'pageview');
       Des Moines, IA<br>
       </div>
 
-      <a class="btn btn-danger btn-large" href="https://www.eventbrite.com/e/dsmagile-2014-tickets-12171610615?ref=ebtnebregn" target="_blank">Sold Out!
-      </a>
+       <a class="btn btn-success btn-large" href="https://www.dropbox.com/sh/l0rem2rb33ahd3y/AABquAYUjevMc2TnqeTQzg-ba?dl=0" target="_blank">Download Presentations</a>
+      <!--<a class="btn btn-danger btn-large" href="https://www.eventbrite.com/e/dsmagile-2014-tickets-12171610615?ref=ebtnebregn" target="_blank">Sold Out!-->
+      <!--</a>-->
     </header>
   </div>
 
@@ -301,8 +301,7 @@ Natalie is a Certified ScrumMaster (CSM) and has her Bachelor of Business Admini
       <!-- End Speakers -->
     </div>
   </div>
-
-
+  
   <!-- ==== SESSIONS ==== -->
   <div class="container" id="sessions" name="sessions">
     <div class="row white">
