Removed extra comment terminator

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ ga('send', 'pageview');
         <p>Speaker Bio Text</p>
       </div>
 
-      <!-- End Speakers -->
+      // End Speakers
     </div>
   </div>
 -->
