--- a/index.html
+++ b/index.html
@@ -75,24 +75,15 @@ ga('send', 'pageview');
       <a id="register" class="btn btn-success btn-large" href="https://www.eventbrite.com/e/dsmagile-spring-2015-tickets-15682559959">Register now...</a>
       <p>The learning continues April 10, 2015 from 8:30 AM to 4:30 PM (CDT)</p>
       <div id="" class="vcard location">
-        <div class="org">Des Moines Public Library</div>
+        <div class="org">Hy-Vee Hall</div>
         <div class="adr">
-          <div class="street-address">1000 Grand Ave.</div>
+          <div class="street-address">730 3rd St.</div>
           <span class="locality">Des Moines</span>
           <span class="region">IA</span>,
           <span class="postal-code">50309</span>
         </div>
       </div>
-      <p>Open Space and mixer to follow at:</p>
-      <div id="" class="vcard location">
-        <div class="org">Americana</div>
-        <div class="adr">
-          <div class="street-address">1312 Locust St.</div>
-          <span class="locality">Des Moines</span>
-          <span class="region">IA</span>,
-          <span class="postal-code">50309</span>
-        </div>
-      </div>
+      <p>Open Space and mixer to follow at the venue</p>
       <p>Check back often for updates; speaker list coming soon...</p>
       <a class="btn btn-success btn-medium" href="http://eepurl.com/8a3tz">Sign up to receive updates via e-mail</a>
       <br/>
