--- a/index.html
+++ b/index.html
@@ -1,47 +1,11 @@
 ---
 layout: base
 ---
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    {% include head.html %}
-</head>
-
-<body data-spy="scroll" data-offset="0" data-target="#navbar-main">
-
-
-<div id="navbar-main">
-  <!-- Fixed navbar -->
-  <div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="icon icon-menu" style="font-size:30px; color:#3498db;"></span>
-        </button>
-        <a class="navbar-brand hidden-xs hidden-sm" href="#home"><span class="icon icon-menu" style="font-size:18px; color:#3498db;"></span></a>
-      </div>
-      <div class="navbar-collapse collapse">
-
-        <ul class="nav navbar-nav">
-          <li><a href="#home" class="smoothScroll">Home</a></li>
-            <li><a href="#speakers" class="smoothScroll"> Speakers</a></li>
-          <!--
-            <li><a href="#sessions" class="smoothScroll"> Sessions</a></li>
-            <li><a href="#schedule" class="smoothScroll"> Schedule</a></li>
-          -->
-        </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
-  </div>
-
   <!-- ==== HEADERWRAP ==== -->
   <div id="headerwrap" id="home" name="home">
     <header class="clearfix">
       <h1>dsmAgile</h1>
       <p>Discuss. Discover. Learn.</p>
-      <a id="register" class="btn btn-success btn-large" href="https://www.eventbrite.com/e/dsmagile-spring-2015-tickets-15682559959">Register now...</a>
       <p>The learning continues April 10, 2015 from 8:30 AM to 4:30 PM (CDT)</p>
       <div id="" class="vcard location">
         <div class="org">Hy-Vee Hall</div>
@@ -53,7 +17,6 @@ layout: base
         </div>
       </div>
       <p>Open Space and mixer to follow at the venue</p>
-      <p>Check back often for updates; speaker list coming soon...</p>
       <a class="btn btn-success btn-medium" href="http://eepurl.com/8a3tz">Sign up to receive updates via e-mail</a>
       <br/>
       <br/>
@@ -72,10 +35,11 @@ layout: base
       <hr>
       <br>
       <br>
-{% for speaker_hash in site.data.speakers %}
-{% assign speaker = speaker_hash[1] %}
-        <div class="col-md-6 centered" id="speaker-name">
-            <img class="img img-circle img-md" src="assets/img/speakers/{{speaker.image}}" alt="">
+{% for session_hash in site.data.sessions %}
+{% assign session = session_hash[1] %}
+    {% for speaker in session.speakers %}
+    <div class="col-md-6 centered" id="{{speaker.id}}">
+            <img class="img img-circle img-md" src="/assets/img/speakers/{{speaker.image}}" alt="">
             <br>
             <h4><b>{{speaker.name}}</b></h4>
             {% if speaker.twitter %}
@@ -92,57 +56,38 @@ layout: base
 
             <p>{{speaker.bio}}</p>
         </div>
+    {% endfor %}
 {% endfor %}
     </div>
   </div>
-<!--
-  <div class="container" id="speakers" name="speakers">
-    <br>
-    <div class="row white centered">
-      <h1 class="centered">SPEAKERS</h1>
-      <hr>
-      <br>
-      <br>
-
-
-
-      <div class="col-md-6 centered" id="speaker-name">
-        <img class="img img-circle img-md" src="assets/img/speakers/speaker-image.png" alt="">
-        <br>
-        <h4><b>Speaker Name</b></h4>
-        <a href="https://twitter.com/speaker-twitter" class="icon icon-twitter"></a>
-        <p>Speaker Bio Text</p>
-      </div>
-
-      // End Speakers
-    </div>
-  </div>
--->
 
   <!-- ==== SESSIONS ==== -->
-<!--
   <div class="container" id="sessions" name="sessions">
     <div class="row white">
       <br>
       <h1 class="centered">SESSIONS</h1>
       <hr>
 
+{% for session_hash in site.data.sessions %}
+{% assign session = session_hash[1] %}
       <div class="col-md-6 centered" id="speaker-name-session">
         <div class="col-md-4">
-          <a href="#speaker-name" class="smoothScroll">
-            <img class="img img-circle" src="assets/img/speakers/speaker-image.png" height="60px" width="60px" alt="">
+          {% for speaker in session.speakers %}
+            <a href="#{{speaker.id}}" class="smoothScroll">
+              <img class="img img-circle" src="/assets/img/speakers/{{speaker.image}}" height="60px" width="60px" alt="">
           </a>
           <br>
-          <h4>Speaker Name</h4>
+          <h4>{{speaker.name}}</h4>
+          {% endfor %}
         </div>
         <div class="col-md-8">
-          <h4><b><a href="#speaker-name-sched" class="smoothScroll">Session Title</a></b></h4>
-          <p>Session Description</p>
+            <h4><b>{{session.title}}</b></h4>
+            <p>{{session.abstract}}</p>
         </div>
       </div>
+{% endfor %}
     </div>
   </div>
-<--
 <!--
   <div class="container" id="schedule" name="schedule">
     <br>
@@ -155,6 +100,3 @@ layout: base
     </div>
   </div>
 -->
-    {% include footer.html %}
-  </body>
-  </html>
