moved fall-14 to year-month folder structure

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@ show-sessions: false
 event:
     name: dsmAgile
     tagline: Discuss. Discover. Learn.
-    date: 2015-04-10
+    date: 2015-09-25 
     time: 8:30 AM to 4:30 PM
     mailing-list: http://eepurl.com/8a3tz
-    <!--eventbriteid: dsmagile-spring-2015-tickets-15682559959-->
+    eventbriteid: dsmagile-fall-2015-tickets-17808997190
     location:
-        name: Hy-Vee Hall
-        address: 730 3rd St.
+        name: Community Choice Credit Union Convention Center
+        address: 833 5th Ave
         city: Des Moines
         state: IA
         zip: 50309
@@ -23,7 +23,7 @@ event:
     <header class="clearfix">
       <h1>{{page.event.name}}</h1>
       <p>{{page.event.tagline}}</p>
-      <p>The learning continues {{page.event.date | date: "%A, %B %-d, %Y" }} from {{page.event.time}}</p>
+      <p>{{page.event.date | date: "%A, %B %-d, %Y" }} from {{page.event.time}}</p>
       <div id="" class="vcard location">
         <div class="org">{{page.event.location.name}}</div>
         <div class="adr">
