add doc and amy

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ event:
         </div>
       </div>
       <p>Open Space and mixer to follow at the venue</p>
-      <a class="btn btn-success btn-medium" href="{{page.event.mailing-list}}">Sign up to receive updates via e-mail</a>
+      <a class="btn btn-success btn-large" href="https://www.eventbrite.com/e/{{page.event.eventbriteid}}">Register</a>
       <br/>
       <br/>
     <!-- <a class="btn btn-success btn-large" href="link-to-presos" target="_blank">Download Presentations</a>-->
