--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: base
 show-speakers: true
-show-sessions: false
+show-sessions: true
 event:
     name: dsmAgile
     tagline: Discuss. Discover. Learn.
@@ -126,10 +126,10 @@ event:
         <thead>
           <tr>
             <th class="col-time">Schedule</th>
-            <th>Track 1</th>
-            <th>Track 2</th>
-            <th>Track 3</th>
-            <th>Track 4</th>
+            <th>Room A</th>
+            <th>Room B</th>
+            <th>Room C</th>
+            <th>Room D</th>
           </tr>
         </thead>
         <tbody>
