sold out banner for all events

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: base
 show-speakers: false
 show-schedule: false
+show-soldout: false
 event:
     name: dsmAgile
     tagline: Discuss. Discover. Learn.
