added registration button with link to eventbrite

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ event:
     date: 2016-09-09
     time: 8:30 AM to 4:30 PM
     mailing-list: http://eepurl.com/NOT_USED
-    eventbriteid:
+    eventbriteid: dsmagile-fall-2016-tickets-25487647239
     location:
         name: Community Choice Credit Union Convention Center
         address: 833 5th Ave
