--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: base
 show-speakers: true
 show-sessions: true
 show-schedule: false
-show-soldout: false
+show-soldout: true
 event:
     name: dsmAgile
     tagline: Discuss. Discover. Learn.
