--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ event:
     date: 2016-09-09
     time: 8:30 AM to 4:30 PM
     mailing-list: http://eepurl.com/NOT_USED
-    eventbriteid: dsmagile-fall-2016-tickets-25487647239
+    <!--eventbriteid: dsmagile-fall-2016-tickets-25487647239-->
     location:
         name: Community Choice Credit Union Convention Center
         address: 833 5th Ave
@@ -112,7 +112,7 @@ event:
         <div class="col-md-8">
             <h4><b>{{session.title}}</b></h4>
             {% if session.link %}
-            <a href="{{session.link}}">Slides</a>
+            <a href="{{session.link}}" target="_blank">Slides</a>
             {% endif %}
             <p>{{session.abstract}}</p>
         </div>
