change the date to oct 13

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ show-soldout: false
 event:
     name: dsmAgile
     tagline: Discuss. Discover. Learn.
-    date: 2017-09-08
+    date: 2017-10-13
     time: 8:30 AM to 4:30 PM
     mailing-list: http://eepurl.com/NOT_USED
     <!--eventbriteid: dsmagile-fall-2016-tickets-25487647239-->
@@ -18,8 +18,8 @@ event:
         state: IA
         zip: 50309
 ---
-{% assign sessions = site.data.2017.09.sessions %}
-{% assign schedule = site.data.2017.09.schedule %}
+{% assign sessions = site.data.2017.10sessions %}
+{% assign schedule = site.data.2017.10.schedule %}
   <!-- ==== HEADERWRAP ==== -->
   <div id="headerwrap" id="home" name="home">
     <header class="clearfix">
