add some speakers for 2017

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: base
-show-speakers: false
+show-speakers: true
 show-sessions: false
 show-schedule: false
 show-soldout: false
@@ -18,7 +18,7 @@ event:
         state: IA
         zip: 50309
 ---
-{% assign sessions = site.data.2017.10sessions %}
+{% assign sessions = site.data.2017.10.sessions %}
 {% assign schedule = site.data.2017.10.schedule %}
   <!-- ==== HEADERWRAP ==== -->
   <div id="headerwrap" id="home" name="home">
