--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ event:
     date: 2017-10-13
     time: 8:30 AM to 4:30 PM
     mailing-list: http://eepurl.com/NOT_USED
-    <!--eventbriteid: dsmagile-fall-2016-tickets-25487647239-->
+    eventbriteid: dsmagile-fall-2017-tickets-35978834663
     location:
         name: Community Choice Credit Union Convention Center
         address: 833 5th Ave
