--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: base
 show-speakers: true
-show-sessions: false
+show-sessions: true
 show-schedule: false
 show-soldout: false
 event:
